Add machine auth client credentials flow
